fixed pose detecting other people behind

--- a/UI-inprogess/src/styles.css
+++ b/UI-inprogess/src/styles.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url("imgs/background.gif");
+  background-image: url("../imgs/background.gif");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
